[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/styles_and_fonts/RacingSansOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/styles/PlayerLabel.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Lobby/Player_Lobby.gd" type="Script" id=3]
[ext_resource path="res://Assets/styles_and_fonts/patinterio.tres" type="Theme" id=4]
[ext_resource path="res://Assets/styles/patinteriolobby.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Label/colors/font_color = Color( 0.172549, 0.172549, 0.627451, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.4, 0, 1 )

[node name="Player_Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -114, 62 )
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerListLeft" type="ItemList" parent="."]
margin_left = 545.0
margin_top = 263.0
margin_right = 770.0
margin_bottom = 363.0
theme = ExtResource( 5 )

[node name="playerListRight" type="ItemList" parent="."]
visible = false
margin_left = 770.0
margin_top = 263.0
margin_right = 995.0
margin_bottom = 363.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
margin_left = 64.1
margin_top = 2.0
margin_right = 164.1
margin_bottom = 32.0
rect_min_size = Vector2( 100, 25 )
theme = ExtResource( 4 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="centerTitle" type="CenterContainer" parent="."]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.3
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobbyName" type="Label" parent="centerTitle"]
margin_left = 687.0
margin_top = 82.0
margin_right = 844.0
margin_bottom = 121.0
theme = SubResource( 3 )
text = "Pat's Lobby"

[node name="centerMenu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_right = 3.0
mouse_filter = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuButtons" type="VBoxContainer" parent="centerMenu"]
margin_left = 649.0
margin_top = 377.0
margin_right = 882.0
margin_bottom = 484.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roleSelect" type="HBoxContainer" parent="centerMenu/menuButtons"]
margin_right = 233.0
margin_bottom = 47.0
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1

[node name="inputPrompts" type="VBoxContainer" parent="centerMenu/menuButtons/roleSelect"]
margin_right = 79.0
margin_bottom = 47.0
size_flags_vertical = 3
custom_constants/separation = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerNamePrompt" type="Label" parent="centerMenu/menuButtons/roleSelect/inputPrompts"]
margin_top = 3.0
margin_right = 79.0
margin_bottom = 17.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Edit Name"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roleSelectPrompt" type="Label" parent="centerMenu/menuButtons/roleSelect/inputPrompts"]
margin_top = 29.0
margin_right = 79.0
margin_bottom = 43.0
size_flags_horizontal = 9
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Current Role"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inputControls" type="VBoxContainer" parent="centerMenu/menuButtons/roleSelect"]
margin_left = 83.0
margin_right = 233.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="playerNameInput" type="LineEdit" parent="centerMenu/menuButtons/roleSelect/inputControls"]
margin_right = 150.0
margin_bottom = 18.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "Pat Interio"
align = 1
max_length = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roleSelectInput" type="Button" parent="centerMenu/menuButtons/roleSelect/inputControls"]
margin_top = 22.0
margin_right = 150.0
margin_bottom = 47.0
rect_min_size = Vector2( 150, 25 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "RUNNER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startGameButton" type="Button" parent="centerMenu/menuButtons"]
margin_top = 57.0
margin_right = 233.0
margin_bottom = 107.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_styles/hover = SubResource( 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="namePopups" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="noNameAlert" type="AcceptDialog" parent="namePopups"]
visible = true
margin_right = 83.0
margin_bottom = 58.0
mouse_filter = 2
window_title = "Name Not Entered"
dialog_text = "You must enter a name."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="illegalCharacterAlert" type="AcceptDialog" parent="namePopups"]
visible = true
margin_right = 83.0
margin_bottom = 58.0
window_title = "Illegal Character Detected"
dialog_text = "Name must contain only standard letters, numbers, or spaces."

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="centerMenu/menuButtons/roleSelect/inputControls/roleSelectInput" to="." method="_on_roleSelectInput_pressed"]
[connection signal="pressed" from="centerMenu/menuButtons/startGameButton" to="." method="_on_startGameButton_pressed"]
